# enchanted-surrogates

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  SLURMrun.bash  SLURMrun_AL_TEST.bash  SLURMrun_lumi.bash  deeplasma_extra_requirements.txt  documentation.md  mkdocs.yml  plugins.yml  pyproject.toml  requirements.txt  runLUMI.py  run_lumi.bash  shell.nix  test.bash
.githooks/: pre-commit
.github/workflows/: coverage-report.yml  coverage_report.yml  documentation.yml  pylint.yml  pytest.yml  pytest_workflow.yml  release.yaml  testing.yml
_configs_old/: AL_STATICPOOL_QLK_gpucpu.yaml  helena_config.yaml
_old/: SLURMrun.bash  SLURMrun_AL_TEST.bash  requirements.txt  run.bash  run.py
_old/common/: database_utils.py
_old/executors/: DaskExecutorSimulation.py  DaskExecutorSimulationPipeline.py  base.py  tasks.py
_old/nn/: networks.py
configs/: AL_STATICPOOL_QLK_gpucpu.yaml  AL_STATICPOOL_QLK_local.yaml  AL_STATICPOOL_QLK_slurm.yaml  AL_Streaming_QLK_gpucpu.yaml  AL_example.yaml  AL_example_gpucpu.yaml  AL_example_local.yaml  AL_example_slurm.yaml  ActiveExecutor_MMMG_maxU_gpr.yaml  Active_MMMGaussian_config.yaml  BayesianOptimizationTest.yaml  HELENA_MISHKA.yaml  Nested_SimulationExecutor_MMMGaussian.yaml  castor_config.yaml  daniel_profile.json  dream_config.yaml  example_active.yaml  example_active_borunner.yaml  example_bayesian_optimization.yaml  example_bayesian_optimization_local.yaml  example_dask_local.yaml  example_dask_slurm.yaml  example_local.yaml  example_local_large.yaml  example_nested.yaml  example_nested_better.yaml  example_nested_dask.yaml  example_nested_friedman.yaml  example_nested_friedman_active.yaml  example_nested_friedman_random.yaml  example_nested_sameold.yaml  example_sequential.yaml  example_sequential_friedman_active.yaml  example_sequential_friedman_random.yaml  gene_config_lumi.yaml  helena_config.yaml  helena_config_beta.yaml  helena_config_beta_noKBM_lumi.yaml  mishka_config.yaml  simple_config.yaml  (+5 more)
docs/: _config.yml  contribution.md  executors.md  gen_ref_pages.py  generate_nav.py  helena_plugin.md  index.md  nesting.md  releases.md  samplers.md  supervisor.md
html/: GENEparser.html  sys.html
notebooks/: data_sprint.ipynb  data_sprint_anna.ipynb  data_sprint_daniel.ipynb  hel_to_eq_submit copy.cmd  hel_to_eq_submit.cmd  helena_to_eqdsk.py  model_sprint_anna.ipynb  parameter_read_test.ipynb  test_gene.ipynb  test_helena_input_parser.ipynb  test_helena_to_pyro.ipynb  test_input_output_parser.ipynb
requirements/: sparse_grids.txt
src/: run.py  run_streaming_experiments.py  test.yaml  tglf_config.yaml
tests/: test_active_learning.py  test_config.yaml  test_config_random_batch.yaml  test_dask_executor.py  test_dask_executor_LocalCluster.py  test_grid.py  test_hypercube.py  test_random.py  test_simple.py  test_simple_workflow.py  test_update_pool.py  train.csv
(+399 files in other folders)
