[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enchanted-surrogates"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib",
    "numpy",
    "pytest",
    "dask[complete]",
    "dask-jobqueue",
    "pandas",
    "pylint",
    "coverage",
    "matplotlib",
    "plotly",
    "PyYAML",
]

[project.optional-dependencies]
bo = [
    "matplotlib",
    "scienceplots",
    "botorch",
    "gpytorch",
    "torch",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
sdsg = [
  "sg-lib @ git+https://github.com/DanHarJor/sensitivity-driven-sparse-grid-approx.git"
]
sobol_sequence = [
    "scipy",
]
pysgpp = [
    "numpy<2.0",
    "pysgpp",
    "scikit-learn",
]
chaospy = [
    "chaospy",
    "numpy>2.0"
]
hdf5 = [
    "h5py",
    "ipykernel",
    "ipywidgets",
]
GPy = [
    "GPy",
    "scikit-learn",
]