[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enchanted-surrogates"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib",
    "numpy",
    "pytest",
    "dask[complete]",
    "dask-jobqueue",
    "pandas",
    "ruff",
    "coverage",
    "matplotlib",
    "plotly",
    "PyYAML",
    "scipy",
    "pyarrow",
    "h5py",
]

[tool.ruff.lint]
select = ["PLE", "E"]
ignore = ["E401", "E501", "E402", "E731", "E711", "E722", "PLE1205"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
bo = [
    "matplotlib",
    "scienceplots",
    "botorch",
    "gpytorch",
    "torch",
    "lampe",
    "pyro-ppl",
    "scipy",
]

sdsg = [
  "sg-lib @ git+https://github.com/DanHarJor/sensitivity-driven-sparse-grid-approx.git"
]

pysgpp = [
    "numpy<2.0",
    "pysgpp",
    "scikit-learn",
]
chaospy = [
    "chaospy",
    "numpy>2.0"
]
hdf5 = [
    "h5py",
    "ipykernel",
    "ipywidgets",
]
GPy = [
    "GPy",
    "scikit-learn",
]
activelearning = [
    "scikit-activeml"
]
